# cursor-chat-export

./: .env.example  .gitignore  AIConversation.md  README.md  chat.py  config.yml  cursor-chat-export  export.py  install.sh  pyproject.toml  requirements.txt  run_manual_all_Db.sh
.gitmeta/: .gitmeta  cids.txt
.gitmeta/cids_detailed/: files-only.txt  with-sha1.txt
draft/: install.sh
scripts/: export_bulk.sh  export_bulk_check_stats.sh
src/: export.py  vscdb.py
